# ds2i_query_server

./: .gitmodules  CMakeLists.txt  query_server.cpp
query/: query_evaluation.hpp  query_expr_and.hpp  query_expr_or.hpp  query_expr_term.hpp  query_parser_exception.hpp  query_scanner.hpp  query_scanner_token.hpp  query_static_parser.hpp
query_server/: queries_interactive.cpp  query_server_utils.hpp  socket.hpp  socket_exception.hpp
